Added file icon handling for loading and saving